--- a/battleships-c#/MyGameWin.csproj
+++ b/battleships-c#/MyGameWin.csproj
@@ -62,6 +62,8 @@
     <Compile Include="src\Model\SeaGridAdapter.cs" />
     <Compile Include="src\Model\Ship.cs" />
     <Compile Include="src\Model\ShipName.cs" />
+    <Compile Include="src\Model\Tile.cs" />
+    <Compile Include="src\Model\TileView.cs" />
     <Compile Include="src\UtilityFunctions.cs" />
   </ItemGroup>
   <ItemGroup>
